--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -24,7 +24,12 @@
   <div class="field">
      <%= form.label :image %>
      <%= form.file_field :image %><br>
-   </div>
+  </div>
+  
+  <div class="field">
+     <%= form.label :detail %>
+     <%= form.text_field :detail %><br>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
