--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,7 +14,12 @@
    <% if @book.image.attached? %>
      <%= image_tag @book.image %>
    <% end %>
- </p>
+</p>
+
+<p>
+  <strong>Detail: </strong>
+  <%= @book.detail %>
+</p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
