--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,7 +21,7 @@
   <%= @book.detail %>
 </p>
 
-<p>Review From</p>
+<p>Review Form</p>
   <%= form_with(model: @book_review, local: true) do |form| %>
    <div class= "field">
      <%= form.text_area :review %>
@@ -31,6 +31,16 @@
      <%= form.submit %>
    </div>
   <% end %>
+  
+ <p>Review List:</p>
+ <ul>
+    <% @book.book_review.each do |book_review|%>
+      <li>
+        <%= book_review.review %>
+        (<i><%= book_review.user_id %></i>)
+      </li>
+     <% end %>
+ </ul>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
